Fixed registration w.r.t Aerogear-Android 1.2.0